crates/crochet_parser/src/snapshots/crochet_parser__tests__classes-5.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"class Foo { foo() {} }\")"
---
Ok(
    Program {
        body: [
            ClassDecl {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 22,
                    },
                },
                span: 0..22,
                ident: Ident {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 6,
                        },
                        end: Position {
                            line: 0,
                            column: 9,
                        },
                    },
                    span: 6..9,
                    name: "Foo",
                },
                class: Class {
                    ident: Ident {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 6,
                            },
                            end: Position {
                                line: 0,
                                column: 9,
                            },
                        },
                        span: 6..9,
                        name: "Foo",
                    },
                    body: [
                        Method(
                            ClassMethod {
                                key: Ident {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 12,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 15,
                                        },
                                    },
                                    span: 12..15,
                                    name: "foo",
                                },
                                kind: Method,
                                lambda: Lambda {
                                    params: [],
                                    body: Expr {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 0,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 0,
                                            },
                                        },
                                        span: 0..0,
                                        kind: Empty,
                                        inferred_type: None,
                                    },
                                    is_async: false,
                                    return_type: None,
                                    type_params: None,
                                },
                                is_static: false,
                                is_mutating: false,
                            },
                        ),
                    ],
                },
            },
        ],
    },
)
