crates/crochet_parser/src/snapshots/crochet_parser__tests__classes-7.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"class Foo { static foo(): string {} }\")"
---
Ok(
    Program {
        body: [
            ClassDecl {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 37,
                    },
                },
                span: 0..37,
                ident: Ident {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 6,
                        },
                        end: Position {
                            line: 0,
                            column: 9,
                        },
                    },
                    span: 6..9,
                    name: "Foo",
                },
                class: Class {
                    ident: Ident {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 6,
                            },
                            end: Position {
                                line: 0,
                                column: 9,
                            },
                        },
                        span: 6..9,
                        name: "Foo",
                    },
                    body: [
                        Method(
                            ClassMethod {
                                key: Ident {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 19,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 22,
                                        },
                                    },
                                    span: 19..22,
                                    name: "foo",
                                },
                                kind: Method,
                                lambda: Lambda {
                                    params: [],
                                    body: Expr {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 0,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 0,
                                            },
                                        },
                                        span: 0..0,
                                        kind: Empty,
                                        inferred_type: None,
                                    },
                                    is_async: false,
                                    return_type: Some(
                                        TypeAnn {
                                            kind: Keyword(
                                                KeywordType {
                                                    keyword: String,
                                                },
                                            ),
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 26,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 32,
                                                },
                                            },
                                            span: 26..32,
                                            inferred_type: None,
                                        },
                                    ),
                                    type_params: None,
                                },
                                is_static: true,
                                is_mutating: false,
                            },
                        ),
                    ],
                    type_params: None,
                },
            },
        ],
    },
)
