crates/crochet_parser/src/snapshots/crochet_parser__tests__classes-9.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"class Foo { set foo(x) {} }\")"
---
Ok(
    Program {
        body: [
            ClassDecl {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 27,
                    },
                },
                span: 0..27,
                ident: Ident {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 6,
                        },
                        end: Position {
                            line: 0,
                            column: 9,
                        },
                    },
                    span: 6..9,
                    name: "Foo",
                },
                class: Class {
                    ident: Ident {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 6,
                            },
                            end: Position {
                                line: 0,
                                column: 9,
                            },
                        },
                        span: 6..9,
                        name: "Foo",
                    },
                    body: [
                        Method(
                            ClassMethod {
                                key: Ident {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 16,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 19,
                                        },
                                    },
                                    span: 16..19,
                                    name: "foo",
                                },
                                kind: Setter,
                                lambda: Lambda {
                                    params: [
                                        EFnParam {
                                            pat: Pattern {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 20,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 21,
                                                    },
                                                },
                                                span: 20..21,
                                                kind: Ident(
                                                    BindingIdent {
                                                        name: "x",
                                                        mutable: false,
                                                        span: 20..21,
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 20,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 21,
                                                            },
                                                        },
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                            type_ann: None,
                                            optional: false,
                                        },
                                    ],
                                    body: Expr {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 0,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 0,
                                            },
                                        },
                                        span: 0..0,
                                        kind: Empty,
                                        inferred_type: None,
                                    },
                                    is_async: false,
                                    return_type: None,
                                    type_params: None,
                                },
                                is_static: false,
                                is_mutating: false,
                            },
                        ),
                    ],
                },
            },
        ],
    },
)
